[package]
name = "answer-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
either = "1.13.0"
env_logger = "0.11.5"
poise = "0.6.1"
rand = "0.8.5"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
serenity = "0.12.2"
tokio = { version = "1.39.3", features = ["full"] }
